# rag_chat_api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  requirements.txt
app/api/v1/: router_chat.py
app/core/: config.py  middleware.py
app/db/: dependencies.py
app/models/: chunk.py  document.py
app/services/: document_service.py  gemini_service.py  rag_service.py
backend/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: deps.py  router_auth.py  router_chat.py  router_documents.py  router_misc.py  utils.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  chunk.py  user.py
backend/app/schemas/: chat.py  document.py  user.py
backend/app/services/: SentenceTransformerService.py  __init__.py  document_service.py  gemini_service.py  rag_service.py
backend/tests/: test_embedding_service.py  test_router_documents.py
frontend/: Dockerfile  index.html  nginx.conf  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  DocumentUpload.tsx  ThemeToggle.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useChat.ts  useDocumentUpload.ts
frontend/src/pages/: Auth.tsx  AuthCallback.tsx  Documents.tsx  Index.tsx
frontend/src/services/: api.ts  chatService.ts  documentParser.ts
frontend/src/types/: chat.ts
