[project]
name = "rag-chat-api"
version = "1.0.0"
description = "RAG Chat API with FastAPI and pgvector"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pgvector",
    "pydantic",
    "slowapi",
    "google-generativeai",
    "PyPDF2",
    "python-docx",
    "python-docx",
    "python-multipart",
    "python-dotenv",
    "tenacity",
    "sentence-transformers",
    "torch",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "authlib",
    "httpx",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
